test/fails/bad_types/par_basics5.lgl
tag par<`t : vec2> is `t->vec3;  // Must result in a vec

void main() {
    print 1;
}